src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Absence__c</fullName>
        <formula>IF( 
AND(TODAY()&gt;=Debut_absence__c , TODAY()&lt;=Fin_abscence__c), true, false 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Absent(e)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approbateur_Delegu_User_Object__c</fullName>
        <label>Approbateur Si Manager Absent</label>
        <relationshipName>Approbateur</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>BypassApex__c</fullName>
        <label>BypassApex</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP01_Account</fullName>
                </value>
                <value>
                    <fullName>AP05_Account</fullName>
                </value>
                <value>
                    <fullName>AP06_MacroprofilReseau</fullName>
                </value>
                <value>
                    <fullName>Utils_PUS</fullName>
                </value>
                <value>
                    <fullName>AP04_Account</fullName>
                </value>
                <value>
                    <fullName>AP03_Conge_Indispo</fullName>
                </value>
                <value>
                    <fullName>AP06_Conge_Indispo</fullName>
                </value>
                <value>
                    <fullName>AP07_Conge_Indispo</fullName>
                </value>
                <value>
                    <fullName>AP01_Conge_Indispo</fullName>
                </value>
                <value>
                    <fullName>AP02_Conge_Indispo</fullName>
                </value>
                <value>
                    <fullName>AP01_CaseComment</fullName>
                </value>
                <value>
                    <fullName>AP08_Conge_Indispo</fullName>
                </value>
                <value>
                    <fullName>AP06_Account</fullName>
                </value>
                <value>
                    <fullName>AP02_Case</fullName>
                </value>
                <value>
                    <fullName>AP01_CompteRenduRempli</fullName>
                </value>
                <value>
                    <fullName>AP01_Case</fullName>
                </value>
                <value>
                    <fullName>AP01_Task</fullName>
                </value>
                <value>
                    <fullName>AP02_Account</fullName>
                </value>
                <value>
                    <fullName>AP02_Anomalie</fullName>
                </value>
                <value>
                    <fullName>AP02_MacroprofilTransporteur</fullName>
                </value>
                <value>
                    <fullName>AP02_Task</fullName>
                </value>
                <value>
                    <fullName>AP03_Account</fullName>
                </value>
                <value>
                    <fullName>AP03_Anomalie</fullName>
                </value>
                <value>
                    <fullName>AP03_MacroprofilService</fullName>
                </value>
                <value>
                    <fullName>AP03_ReseauAssocie</fullName>
                </value>
                <value>
                    <fullName>AP03_Task</fullName>
                </value>
                <value>
                    <fullName>AP04_Conge_Indispo</fullName>
                </value>
                <value>
                    <fullName>AP05_Conge_Indispo</fullName>
                </value>
                <value>
                    <fullName>AP07_Account</fullName>
                </value>
                <value>
                    <fullName>AP08_Attachement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass ProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BypassValidationRule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass ValidationRule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BypassWorkflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Debut_absence__c</fullName>
        <description>La date de début d&apos;absence</description>
        <label>Date Début absence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fin_abscence__c</fullName>
        <description>Date de Fin d&apos;absence</description>
        <label>Date Fin absence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_Absent__c</fullName>
        <formula>Manager.Absence__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Absent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operateur__c</fullName>
        <description>Ce champ permet de gérer la visibilité des utilisateurs entre les opérateurs.</description>
        <label>Opérateur</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOV_GLO_OPE</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferenceExterne__c</fullName>
        <externalId>true</externalId>
        <label>Réference Externe</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tech_GMT_Offset_Formula__c</fullName>
        <formula>TEXT(
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 00:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 01:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 02:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 03:00:00&quot;)) - TODAY()) +
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 04:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 05:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 06:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 07:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 08:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 09:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 10:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 11:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 12:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 13:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 14:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 15:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 16:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 17:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 18:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 19:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 20:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 21:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 22:00:00&quot;)) - TODAY()) + 
(DATEVALUE(DATETIMEVALUE(TEXT(TODAY())+&quot; 23:00:00&quot;)) - TODAY())
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_GMT_Offset_Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_GMT_Offset__c</fullName>
        <label>Tech GMT Offset</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Locale_Sid_Key__c</fullName>
        <label>Tech Locale Sid Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Tech_Locale_Sid_Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Utilisateurs actifs</label>
        <language>fr</language>
        <sharedTo>
            <group>EXPLOITATION</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Administrateur</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Administrateurs</label>
        <language>fr</language>
        <sharedTo>
            <group>EXPLOITATION</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Gestion_Licences</fullName>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>Operateur__c</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>lessThan</operation>
            <value>6/1/2018 12:00 AM</value>
        </filters>
        <label>Gestion Licences</label>
        <language>fr</language>
        <sharedTo>
            <group>EXPLOITATION</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tous_les_utilisateurs</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Tous les utilisateurs</label>
        <language>fr</language>
        <sharedTo>
            <group>EXPLOITATION</group>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Webhelp_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.COMPANY_NAME</field>
            <operation>equals</operation>
            <value>webhelp</value>
        </filters>
        <label>Webhelp Users</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>X0_Active_BUSINESS_ADMIN</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>DELEGATED_APPROVER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>LAST_UPDATE_BY_ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Administrateur fonctionnel,Functional Adminstrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>0_Active BUSINESS ADMIN</label>
        <language>en_US</language>
        <sharedTo>
            <group>EXPLOITATION</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X0_Active_SYSTEM_ADMIN</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>DELEGATED_APPROVER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>LAST_UPDATE_BY_ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Administrateur système</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>0_Active SYSTEM ADMIN</label>
        <language>en_US</language>
        <sharedTo>
            <group>EXPLOITATION</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X0_Active_TECHNICAL_USERS</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>DELEGATED_APPROVER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>LAST_UPDATE_BY_ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Service</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>odaseva</value>
        </filters>
        <label>0_Active TECHNICAL_USERS</label>
        <language>en_US</language>
        <sharedTo>
            <group>EXPLOITATION</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1_Active_FRENCH_USERS</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8 AND 9</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>DELEGATED_APPROVER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>LAST_UPDATE_BY_ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operateur__c</field>
            <operation>equals</operation>
            <value>PUS_FR,CLP_FR</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Chatter Free User</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Functional Adminstrator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Service_accounts</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>ServiceAccounts_ro</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>ServiceAccounts</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Administrateur fonctionnel</value>
        </filters>
        <label>1_Active FRENCH USERS</label>
        <language>en_US</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2_Active_BNL_USERS</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8 AND 9 AND 10</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Operateur__c</columns>
        <columns>MANAGER</columns>
        <columns>DELEGATED_APPROVER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>LAST_UPDATE_BY_ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operateur__c</field>
            <operation>equals</operation>
            <value>DPD_BNL</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Chatter Free User</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Administrateur système</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Functional Adminstrator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Service_accounts</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>ServiceAccounts_ro</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>ServiceAccounts</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Administrateur fonctionnel</value>
        </filters>
        <label>2_Active BNL_USERS</label>
        <language>en_US</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X3_Active_HUN_USERS</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8 AND 9 AND 10</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Operateur__c</columns>
        <columns>MANAGER</columns>
        <columns>DELEGATED_APPROVER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>LAST_UPDATE_BY_ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operateur__c</field>
            <operation>equals</operation>
            <value>DPD_HUN</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Chatter Free User</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Administrateur système</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Functional Adminstrator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Service_accounts</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>ServiceAccounts_ro</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>ServiceAccounts</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Administrateur fonctionnel</value>
        </filters>
        <label>3_Active HUN_USERS</label>
        <language>en_US</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X4_Active_CHE_USERS</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8 AND 9 AND 10</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Operateur__c</columns>
        <columns>MANAGER</columns>
        <columns>DELEGATED_APPROVER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>LAST_UPDATE_BY_ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operateur__c</field>
            <operation>equals</operation>
            <value>DPD_CHE</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Chatter Free User</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Administrateur système</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Functional Adminstrator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Service_accounts</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>ServiceAccounts_ro</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>ServiceAccounts</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Administrateur fonctionnel</value>
        </filters>
        <label>4_Active CHE_USERS</label>
        <language>en_US</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X5_Active_CZE_USERS</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8 AND 9 AND 10</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Operateur__c</columns>
        <columns>MANAGER</columns>
        <columns>DELEGATED_APPROVER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>LAST_UPDATE_BY_ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operateur__c</field>
            <operation>equals</operation>
            <value>DPD_CZE</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Chatter Free User</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Administrateur système</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Functional Adminstrator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Service_accounts</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>ServiceAccounts_ro</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>ServiceAccounts</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Administrateur fonctionnel</value>
        </filters>
        <label>5_Active CZE_USERS</label>
        <language>en_US</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X_Inactive_BNL_USERS</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>DELEGATED_APPROVER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>LAST_UPDATE_BY_ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operateur__c</field>
            <operation>equals</operation>
            <value>DPD_BNL</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Chatter Free User</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Administrateur fonctionnel</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Service_accounts</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>ServiceAccounts_ro</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>ServiceAccounts</value>
        </filters>
        <label>X_Inactive BNL USERS</label>
        <language>en_US</language>
        <sharedTo>
            <group>EXPLOITATION</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X_Inactive_BUSINESS_ADMIN</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>DELEGATED_APPROVER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>LAST_UPDATE_BY_ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Administrateur fonctionnel</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>X_Inactive BUSINESS ADMIN</label>
        <language>en_US</language>
        <sharedTo>
            <group>EXPLOITATION</group>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>